# callrevive-ai

./: .env.example  .gitignore  README.md  render.yaml
backend/: Dockerfile  Dockerfile.worker  alembic.ini  check_counts.py  clean_db.py  pyproject.toml  query_calls.py  query_twilio_account.py  query_twilio_alerts.py  query_twilio_calls.py  requirements.txt  seed.py  update_twilio_webhook.py
backend/alembic/: env.py
backend/alembic/versions/: 83844b893551_initial_migration.py
backend/app/: __init__.py  main.py
backend/app/ai/: appointment_extractor.py  conversation_summarizer.py  gemini_client.py  intent_detector.py  lead_qualifier.py  prompts.py  recommendation_engine.py  revenue_predictor.py  sentiment_analyzer.py
backend/app/api/: __init__.py  deps.py
backend/app/communication/: __init__.py  notification_dispatcher.py  twilio_client.py  whatsapp_client.py
backend/app/core/: config.py  exceptions.py  middleware.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  analytics_event.py  appointment.py  audit_log.py  business.py  call.py  call_recording.py  conversation.py  customer.py  lead.py  notification.py  revenue_prediction.py  user.py
backend/app/schemas/: __init__.py  analytics.py  appointment.py  auth.py  business.py  call.py  common.py  conversation.py  customer.py  lead.py  notification.py  revenue.py  user.py
backend/app/services/: analytics_service.py  appointment_service.py  auth_service.py  business_service.py  call_service.py  conversation_service.py  lead_service.py  notification_service.py  storage_service.py  user_service.py
backend/app/voice/: __init__.py  language_config.py  twiml_generator.py  voice_handler.py
backend/app/worker/: celery_app.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth_endpoints.py  test_webhook_endpoints.py
(+139 files in other folders)
